# Qt-Sync-Plot

./: CMakeLists.txt  main.cpp
doc/: EEG-00-T4.webm  EEG-01-F8.webm  EEG-02-FP2.webm  EEG-03-FP1.webm  EEG-04-F7.webm  EEG-05-T3.webm  EEG-06-T5.webm  EEG-07-O1.webm  EEG-08-O2.webm  EEG-09-T6.webm  fakeData.ora  fakeDataGenExample.ods  ideaDraft.ora
src/: CMakeLists.txt  SendData.cpp  aleDataProvider.cpp  aleDataProvider.h  clkTimer.cpp  clkTimer.h  eegLocalRawData.cpp  eegLocalRawData.h  fakeData.cpp  fakeData.h  lslDataProvider.cpp  lslDataProvider.h  lslFindWindow.cpp  lslFindWindow.h  lslStreamItem.h  pltCartesian.cpp  pltCartesian.h  pltDataProvider.cpp  pltDataProvider.h  pltPolarian.cpp  pltPolarian.h  procData.cpp  procData.h  qRootWindow.cpp  qRootWindow.h  qmainwindow.cpp  qmainwindow.h
src/qcustomplot/: CMakeLists.txt
